--- a/app/rtkuser-qt/src/window.ui
+++ b/app/rtkuser-qt/src/window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>617</width>
-    <height>238</height>
+    <width>596</width>
+    <height>408</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -93,6 +93,9 @@
           </item>
           <item row="0" column="1">
            <widget class="QLineEdit" name="IBGEObsInput">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="placeholderText">
              <string>Observação</string>
             </property>
@@ -100,6 +103,9 @@
           </item>
           <item row="1" column="1">
            <widget class="QLineEdit" name="IBGENavInput">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="placeholderText">
              <string>Navegação</string>
             </property>
@@ -114,6 +120,9 @@
           </item>
           <item row="0" column="2">
            <widget class="QPushButton" name="IBGEObsButton">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Open File</string>
             </property>
@@ -121,6 +130,9 @@
           </item>
           <item row="1" column="2">
            <widget class="QPushButton" name="IBGENavButton">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Open File</string>
             </property>
@@ -141,6 +153,9 @@
         </item>
         <item>
          <widget class="QLineEdit" name="baseLatInput">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -151,6 +166,9 @@
         </item>
         <item>
          <widget class="QLineEdit" name="baseLonInput">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="placeholderText">
            <string>Lon</string>
           </property>
@@ -158,6 +176,9 @@
         </item>
         <item>
          <widget class="QLineEdit" name="baseAltInput">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="placeholderText">
            <string>Alt</string>
           </property>
@@ -165,6 +186,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="basePositionButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Open File</string>
           </property>
@@ -173,24 +197,14 @@
        </layout>
       </item>
       <item>
-       <widget class="QPushButton" name="Process">
-        <property name="text">
-         <string>Converter</string>
-        </property>
-       </widget>
+       <widget class="QTextEdit" name="output"/>
       </item>
       <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
+       <widget class="QPushButton" name="processButton">
+        <property name="text">
+         <string>Process</string>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
+       </widget>
       </item>
      </layout>
     </item>
